=======
Changes
=======

3.5.1 (unreleased)
------------------

* Remove deprecated code.

3.5.0 (2009-03-06)
------------------

* Split password manager functionality off to the new ``zope.password``
  package. Backward-compatibility imports are left in place.

* Use ``zope.site`` instead of ``zope.app.component``.

3.5.0a2 (2009-02-01)
--------------------

* Make old encoded passwords really work.

3.5.0a1 (2009-01-31)
--------------------

* Use ``zope.container`` instead of ``zope.app.container``.

* Encoded passwords are now stored with a prefix ({MD5}, {SHA1},
  {SSHA}) indicating the used encoding schema. Old (encoded) passwords
  can still be used.

* Add an SSHA password manager that is compatible with standard LDAP
  passwords. As this encoding gives better security agains dictionary
  attacks, users are encouraged to switch to this new password schema.

* InternalPrincipal now uses SSHA password manager by default.

3.4.4 (2008-12-12)
------------------

* Depend on zope.session instead of zope.app.session. The first one
  currently has all functionality we need.
* Fix deprecation warnings for ``md5`` and ``sha`` on Python 2.6.

3.4.3 (2008-08-07)
------------------

* No changes. Retag for correct release on PyPI.

3.4.2 (2008-07-09)
-------------------

* Make it compatible with zope.app.container 3.6.1 and 3.5.4 changes,
  Changed ``super(BTreeContainer, self).__init__()`` to 
  ``super(GroupFolder, self).__init__()`` in ``GroupFolder`` class.

3.4.1 (2007-10-24)
------------------

* Avoid deprecation warning.

3.4.0 (2007-10-11)
------------------

* Updated package meta-data.

3.4.0b1 (2007-09-27)
--------------------

* First release independent of Zope.