@@ -7,6 +7,9 @@ Changes
 
 * Remove deprecated code.
 
+* The "Password Manager Names" vocabulary and simple password manager registry
+  were moved to the ``zope.password`` package.
+
 3.5.0 (2009-03-06)
 ------------------
 
